--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     <h2 class="target__title titleMain">Этот курс для тебя, если:</h2>
                     <div class="target__aside">
                     <div class="target__list">
-                        <li class="target__listItem">1 – Ты хочешь узнать, в чем твое предназначение и цель жизни. </li>
+                        <li class="target__listItem">1 – Ты застреваешь в страхах и сомнениях перед тем как начать действовать. </li>
                         <li class="target__listItem">2 – Твои мечты пока только прописаны на бумаге, а желания отложены в ящик «когда-нибудь».
                         </li>
-                        <li class="target__listItem">3 – Ты забыла, что такое получать подарки, или отказываешься от них из-за внутренних страхов и сомнений</li>
+                        <li class="target__listItem">3 – Ты забыла что такое получать подарки и комплименты или не принимаешь их из-за внутренних барьеров.</li>
                     </div>
                     <div class="target__aside-img">
                         <img class="aside-img" src="./images/about.png" alt="">
@@ -124,11 +124,12 @@
                                 <h4 class="about__subtitle">Привет! Меня зовут Надежда Якимова! </h4>
                             </div>
                            <ul class="about__list">
-                            <li class="about__li">Уже 13 лет я изучаю психологию и открываю самые эффективные методы, которые помогли мне и моим клиентам изменить жизнь в лучшую сторону во всех сферах
+                            <li class="about__li"> Знаю, как сложно бывает идти вперед, когда внутри сомнения и каждый шаг вызывает тревогу. Когда кажется, что предназначение рядом, но не удается его поймать.
                             </li>
-                            <li class="about__li">Я сертифицированный специалист нейрографики, психолог, гештальт-консультант, коуч, расстановщик, ведущая трансформационных игр, автор медитаций и терапевтических курсов</li>
-                            <li class="about__li">За 6 лет практики более 1000 клиентов прошли со мной этот путь и достигли значительных положительных изменений!
+                            <li class="about__li"> На курсе «НейроКлючи» мы будем работать с этими ощущениями, чтобы освободиться от напряжения и найти ответы, которые уже есть внутри</li>
+                            <li class="about__li">Я сертифицированный специалист нейрографики, психолог, гештальт- консультант, коуч, расстановщик, ведущая трансформационных игр, автор медитаций, терапевтических курсов и просто счастливая женщина
                             </li>
+                            <li class="about__li">6 лет практики. Более 1000 клиентов достигли со мной положительных изменений в разных сферах жизни!</li>
                            </ul>
                         </div>
                     </div>
@@ -307,7 +308,7 @@
                     <div class="courseProgram__aside">
                         <div class="courseProgram__block">
                             <div><img src="./images/icons/Love Path.png" alt="" class="courseProgram__image"></div>
-                            <p class="courseProgram__text">Осознаешь свое предназначение и поймешь, в каком направлении двигаться дальше</p>
+                            <p class="courseProgram__text">Осознаешь свой путь и куда двигаться дальше</p>
                         </div>
                         <div class="courseProgram__block">
                             <div><img src="./images/icons/fire.png" alt="" class="courseProgram__image"></div>
@@ -315,11 +316,11 @@
                         </div>
                         <div class="courseProgram__block">
                             <div><img src="./images/icons/gift.png" alt="" class="courseProgram__image"></div>
-                            <p class="courseProgram__text">Начнешь легче принимать подарки от мужчин и видеть изобилие Мира</p>
+                            <p class="courseProgram__text">Начнешь легче принимать подарки и видеть изобилие Мира</p>
                         </div>
                         <div class="courseProgram__block">
                             <div><img src="./images/icons/Prenatal Yoga.png" alt="" class="courseProgram__image"></div>
-                            <p class="courseProgram__text">С каждым рисунком на смену твоим страхам, сомнениям и внутренним запретам будут приходить расслабление в теле, спокойствие и уверенность в действия</p>
+                            <p class="courseProgram__text">С каждым рисунком на смену твоим страхам, сомнениям и внутренним запретам будут приходить расслабление в теле, спокойствие и уверенность в действиях</p>
                         </div>
                     </div>
                 </div>
@@ -416,7 +417,7 @@
                         <div style="width: 100%;" class="content list-content">
                             <li class="content__li">1. Альбомные листы А4, плотность 150-300.</li>
                             <li class="content__li">2. Черный маркер 1 мм, или 1-3мм. Можно фирмы SCHNEIDER</li>
-                            <li class="content__li">3.Цветные карандаши от 6 цветов</li>
+                            <li class="content__li">3. Цветные карандаши от 6 цветов</li>
                             <li class="content__li">4. Точилка для карандашей </li>
                             <li class="content__li">5. Цветовыдели по желанию</li>
                             </div>
@@ -430,7 +431,7 @@
                       <div class="container">
                         <div class="label">Я не верю, что смогу изменить свою жизнь</div>
                         <div style="width: 100%;" class="content">
-                            Ты не обязана верить с самого начала. Просто начни, а положительные перемены в твоей жизнистанут лучшим доказательством. Первые результаты приходят очень быстро, и ты сама увидишь, как легко можно изменить мышление, а затем – и свою жизнь. </div>
+                            Ты не обязана верить с самого начала. Просто начни, а положительные перемены в твоей жизни станут лучшим доказательством. Первые результаты приходят очень быстро, и ты сама увидишь, как легко можно изменить мышление, а затем – и свою жизнь. </div>
                       </div>
                     
                       <hr>
